--- a/index.html
+++ b/index.html
@@ -2,13 +2,21 @@
   <head>
     <title>Banari Amman Institute of technology</title>
     <link rel="stylesheet" type="text/css" href="./style.css" />
-		<link
-		rel="stylesheet"
-		href="https://unpkg.com/swiper/swiper-bundle.min.css"
-	/>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper/swiper-bundle.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
+    />
   </head>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+    crossorigin="anonymous"
+  />
   <body>
     <nav>
       <img class="nav-img" src="headlogo.svg" alt="logo" />
@@ -150,36 +158,46 @@
       </div>
     </nav>
 
-		<div class="swiper mySwiper">
+    <div class="swiper mySwiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
-					<div class="img">
-						<img class="imgf" src="img1.webp" alt="">
-					</div></div>
+          <div class="img">
+            <img class="imgf" src="img1.webp" alt="" />
+          </div>
+        </div>
         <div class="swiper-slide">
           <div class="img">
-					<img  class="imgf" src="img2.jpg" alt="">
-				</div>
-      </div>
-       <!--  <div class="swiper-slide">	<div class="img">
+            <img class="imgf" src="img2.jpg" alt="" />
+          </div>
+        </div>
+        <!--  <div class="swiper-slide">	<div class="img">
           <img class="imgf" src="img10.jfif" alt="">
         </div></div>
- -->        <div class="swiper-slide">	<div class="img">
-          <img class="imgf" src="img4.webp" alt="">
-        </div></div>
-     <!--    <div class="swiper-slide">	<div class="img">
+ -->
+        <div class="swiper-slide">
+          <div class="img">
+            <img class="imgf" src="img4.webp" alt="" />
+          </div>
+        </div>
+        <!--    <div class="swiper-slide">	<div class="img">
           <img class="imgf" src="img5.jfif" alt="">
         </div></div> -->
-        <div class="swiper-slide">	<div class="img">
-          <img class="imgf" src="img6.webp" alt="">
-        </div></div>
-        <div class="swiper-slide">	<div class="img">
-          <img class="imgf" src="img7.png" alt="">
-        </div></div>
-        <div class="swiper-slide">	<div class="img">
-          <img class="imgf" src="img8.webp" alt="">
-        </div></div>
-<!--         <div class="swiper-slide">	<div class="img">
+        <div class="swiper-slide">
+          <div class="img">
+            <img class="imgf" src="img6.webp" alt="" />
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <div class="img">
+            <img class="imgf" src="img7.png" alt="" />
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <div class="img">
+            <img class="imgf" src="img8.webp" alt="" />
+          </div>
+        </div>
+        <!--         <div class="swiper-slide">	<div class="img">
           <img class="imgf" src="img10.jfif" alt="">
         </div></div> -->
       </div>
@@ -189,81 +207,119 @@
 
     <div class="header">
       <div class="header-content">
-    <p><i class="icons bi bi-mortarboard-fill"></i></p>
-    <h3>Programmes</h3>
-    <p>Live as if you were to die tomorrow. Learn as if you were to live forever.. 
-
-    </p>
-  </div>
-  <div class="header-content">
-    <p><i class="icons bi bi-trophy-fill"></i></p>
-    <h3>Achievements</h3>
-    <p>Every achievement is a servitude. It compels us to a higher achievement...
-
-    </p>
-  </div>
-  <div class="header-content">
-    <p><i class="icons bi bi-briefcase-fill"></i></p>
-    <h3>Placements</h3>
-    <p>Realizing what you are good at starts with finding what you're passionate...
-
-    </p>
-  </div>
-  </div>
+        <p><i class="icons bi bi-mortarboard-fill"></i></p>
+        <h3>Programmes</h3>
+        <p>
+          Live as if you were to die tomorrow. Learn as if you were to live
+          forever..
+        </p>
+      </div>
+      <div class="header-content">
+        <p><i class="icons bi bi-trophy-fill"></i></p>
+        <h3>Achievements</h3>
+        <p>
+          Every achievement is a servitude. It compels us to a higher
+          achievement...
+        </p>
+      </div>
+      <div class="header-content">
+        <p><i class="icons bi bi-briefcase-fill"></i></p>
+        <h3>Placements</h3>
+        <p>
+          Realizing what you are good at starts with finding what you're
+          passionate...
+        </p>
+      </div>
+    </div>
     <div class="centers container">
-      <div >
-        <img  class="imf" src="img1.webp" alt="dfd">
+      <div>
+        <img class="imf" src="img1.webp" alt="dfd" />
       </div>
       <div class="contentss">
         <h1>Where you Learn to Stay Ahead</h1>
         <p>
-        Bannari Amman Institute of Technology is an Autonomous, Self-financing Engineering College, Approved by AICTE, New Delhi and Affiliated to Anna University, Chennai. Nestled on the banks of The River Bhavani, BIT campus provides environment for learning in harmony with nature, away from the odds of the city life. The spacious and the earth hugging buildings punctuated with landscaped courtyards and pathways are designed to emphasise the business ethics and or characteristics of an excellent centre for learning. The Campus hosts well planned academic blocks, computer centres, lecture halls, libraries, laboratories, conference halls, staff quarters, hostels and students' centres. The Campus also houses a co-operative store, ATM (Axis, SBI and KVB) and a clinic to attend to the general health of the students and staff.
+          Bannari Amman Institute of Technology is an Autonomous, Self-financing
+          Engineering College, Approved by AICTE, New Delhi and Affiliated to
+          Anna University, Chennai. Nestled on the banks of The River Bhavani,
+          BIT campus provides environment for learning in harmony with nature,
+          away from the odds of the city life. The spacious and the earth
+          hugging buildings punctuated with landscaped courtyards and pathways
+          are designed to emphasise the business ethics and or characteristics
+          of an excellent centre for learning. The Campus hosts well planned
+          academic blocks, computer centres, lecture halls, libraries,
+          laboratories, conference halls, staff quarters, hostels and students'
+          centres. The Campus also houses a co-operative store, ATM (Axis, SBI
+          and KVB) and a clinic to attend to the general health of the students
+          and staff.
         </p>
       </div>
     </div>
     <div class="contain">
-
       <div class="inside">
         <h3>Upcoming events</h3>
-    <marquee width="60%" direction="up" height="200px"  scrollamount="5">
-      <p>
-</p>Second International Conference on“Mycotechnology: Present Status and Future Perspectives -MTPSFP -2022”
-<p>
-Second International Conference on Circuits, Signals, Systems and Securities ICCSSS 2022
-</p>
-<p>Second National Conference on Innovations in Information and Communication Technologies (NCIICT - 2022)
-</p>
-</marquee>
-</div>
-<div class="inside">
-   <h3>Latest News</h3>
-<marquee width="90%" direction="up" height="200px"  scrollamount="10">
-      <p>
-This is a sample scrolling text that has scrolls in the upper direction.
-</p>
-<p>
-This is a sample scrolling text that has scrolls in the upper direction.
-</p>
-<p>
-This is a sample scrolling text that has scrolls in the upper direction.
-</p>
-</marquee>
-</div>
-<div class="inside">
-   <h3>Prease Realese</h3>
- <marquee width="60%" direction="up" height="200px" scrollamount="7">
-      <p>
-This is a sample scrolling text that has scrolls in the upper direction.
-</p>
-<p>
-This is a sample scrolling text that has scrolls in the upper direction.
-</p>
-<p>
-This is a sample scrolling text that has scrolls in the upper direction.
-</p>
-</marquee>
-</div>
-</div>
+        <marquee width="60%" direction="up" height="200px" scrollamount="5">
+          <p></p>
+          Second International Conference on“Mycotechnology: Present Status and
+          Future Perspectives -MTPSFP -2022”
+          <p>
+            Second International Conference on Circuits, Signals, Systems and
+            Securities ICCSSS 2022
+          </p>
+          <p>
+            Second National Conference on Innovations in Information and
+            Communication Technologies (NCIICT - 2022)
+          </p>
+          <p>
+            Second International Conference On Smart Technologies, Communication
+            & Robotics (STCR) - 2022
+          </p>
+        </marquee>
+      </div>
+      <div class="inside">
+        <h3>Latest News</h3>
+        <marquee width="90%" direction="up" height="200px" scrollamount="10">
+          <p>
+            BITians bagged four prizes worth Rs.3,50,000 in Smart India
+            Hackathon hardware Competition 2019
+          </p>
+          <p>
+            BIT Secured 2nd position in DATAQUEST-CMR Survey 2019 | Ranking of
+            Top Private Technical Schools 2019 | Ranking of India's Top
+            Engineering Colleges 2019
+          </p>
+          <p>
+            BIT Ranked one among Top 100 Best Engineering Colleges in India by
+            NIRF 2019, Ministry of Human Resource Development, Govt. Of India
+          </p>
+          <p>
+            College alumnus sets record on fabricating cost effective
+            advertising LED cube - The Hindu
+          </p>
+          <p>College students bag 11 medals in contest - The Hindu</p>
+          <p>
+            National Award for Bannari Amman Institute of Technology - The Covai
+            Mail
+          </p>
+        </marquee>
+      </div>
+      <div class="inside">
+        <h3>Prease Realese</h3>
+        <marquee width="60%" direction="up" height="200px" scrollamount="7">
+          <p>
+            Bannari Amman Institute of Technology students win 12 medals in
+            IndiaSkills competition - The Hindu
+          </p>
+          <p>
+            International awards for Bannari Amman Institute of Technology - The
+            Hindu
+          </p>
+          <p>
+            College alumnus sets record on fabricating cost effective
+            advertising LED cube - The Hindu
+          </p>
+        </marquee>
+      </div>
+    </div>
     <div class="footer-top">
       <div class="footer">
         <div class="footer-item">
@@ -318,10 +374,10 @@ This is a sample scrolling text that has scrolls in the upper direction.
           </p>
         </div>
       </div>
-			<div class="foot-end">
-				<p>By dineshbabu</p>
-				<p>&copy; Copyright 2022 - Dineshbabu </p>
-			</div>
+      <div class="foot-end">
+        <p>By dineshbabu</p>
+        <p>&copy; Copyright 2022 - Dineshbabu</p>
+      </div>
     </div>
     <script
       type="module"
@@ -331,7 +387,7 @@ This is a sample scrolling text that has scrolls in the upper direction.
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
-		<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
     <!-- Initialize Swiper -->
     <script>
@@ -341,19 +397,31 @@ This is a sample scrolling text that has scrolls in the upper direction.
       //     prevEl: ".swiper-button-prev",
       //   },
       // });
-			const swiper = new Swiper('.swiper', {
+      const swiper = new Swiper(".swiper", {
         navigation: {
-           nextEl: ".swiper-button-next",
-           prevEl: ".swiper-button-prev",
-         },
-         loop:true,
-      autoplay: {
+          nextEl: ".swiper-button-next",
+          prevEl: ".swiper-button-prev",
+        },
+        loop: true,
+        autoplay: {
           delay: 1000,
-       },
-     });
+        },
+      });
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
