--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <nav>
       <img class="nav-img" src="headlogo.svg" alt="logo" />
       <div class="nav-head">
-        <p class="nav-item">Home</p>
+        <p class="nav-item">
+          <a style="text-decoration: none" class="q" href="index.html">Home</a>
+        </p>
         <div class="dropdown">
           <p class="nav-item about">
             About BIT
@@ -39,9 +41,23 @@
             </svg>
           </p>
           <div class="dropdowncontent">
-            <p class="content">Bit at glace</p>
+            <p>
+              <a
+                style="text-decoration: none; color: black"
+                href="bitatglance.html"
+                class="content"
+                >Bit at glace</a
+              >
+            </p>
             <p class="content">Administartion</p>
-            <p class="content">vision and mision</p>
+            <p>
+              <a
+                style="text-decoration: none; color: black"
+                href="vision.html"
+                class="content"
+                >Vision and Mission</a
+              >
+            </p>
             <p class="content">Achievements</p>
             <p class="content">History</p>
             <p class="content">Downloads</p>
@@ -303,7 +319,7 @@
         </marquee>
       </div>
       <div class="inside">
-        <h3>Prease Realese</h3>
+        <h3>Press Release</h3>
         <marquee width="60%" direction="up" height="200px" scrollamount="7">
           <p>
             Bannari Amman Institute of Technology students win 12 medals in
