--- a/vision.html
+++ b/vision.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="./style.css" />
-    <link rel="stylesheet" href="bitatglance.css" />
-    <title>Bit at Glance</title>
+    <title>Vision and Mission</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="vision.css" />
   </head>
   <body>
     <nav>
@@ -165,86 +165,51 @@
       </div>
     </nav>
     <div class="head">
-      <h3 class="head-title">BIT at a Glance</h3>
-      <p class="head-content">Home > About > Bit at a glance</p>
+      <h3 class="head-title">Vision and Mission</h3>
+      <p class="head-content">Home > About > Vision and Mission</p>
     </div>
     <div class="container">
-      <div class="cont-item">
-        <h3 class="cont-head">BIT at a Glance</h3>
-        <p class="cont-para">
-          Bannari Amman Institute of Technology is an<b>
-            Autonomous, Self-financing Engineering College, Approved by AICTE,
-            New Delhi and Affiliated to Anna University, Chennai. </b
-          >>It was established in 1996 by the<b>
-            <span>Bannari Amman Group, </span> </b
-          >serves as one of the citadels of higher education in the Southern
-          part of India. BIT aids to impart knowledge, teamwork, innovation,
-          entrepreneurship, courage, sacrifice and duty which are innards of a
-          meaningful life.
-        </p>
-        <p class="cont-para">
-          BIT has adopted academic reforms that are aimed at inculcating
-          scientific temper, efficiency, integrity, and values among the student
-          community, which transforms them into good citizens and valued
-          employees, entrepreneurs or academicians. It also encourages teachers
-          to have teaching accountability, morals and values and to be role
-          models to the students. Focus is also made to ensure that the needs of
-          all sections of students are catered to.
-        </p>
+      <div class="side">
+        <p class="side-head">Vision and Mission</p>
+        <div class="box">
+          <p>Brochure</p>
+          <ion-icon name="document"></ion-icon>
+        </div>
       </div>
-      <div class="cont-item">
-        <h3 class="cont-head">Honors</h3>
-        <ul class="cont-para">
+      <div class="aside">
+        <h2 class="aside-head">Vision & Mission</h2>
+        <h3 class="aside-sub">Vision</h3>
+        <ul>
           <li>
-            Prestigious IMC Ramkrishna Bajaj National Quality Award 2019 in the
-            Education Category from the IMC Chamber of Commerce and Industry.
+            To be a centre of excellence, providing world-class education that
+            transform individuals into intellectual, empathetic and responsible
+            citizens.
           </li>
-          <li>
-            Awarded 'Clean & Smart Campus Award 2019' for the best practices
-            carried out in the institute premises by AICTE.
-          </li>
-          <li>
-            Ranked one among Top 100 Best Engineering Colleges in India by NIRF
-            2019, MHRD, Govt. Of India
-          </li>
-          <li>
-            Secured 2nd position in DATAQUEST-CMR Survey 2019 | Ranking of Top
-            Private Technical Schools 2019
-          </li>
-          <li>
-            46th Ranking among Top 165 Best Private Engineering Colleges in
-            India by The India Today Survey, 2018
-          </li>
-          <li>
-            76th Ranking among Top 100 Best Engineering Colleges in India by
-            NIRF 2018, MHRD, Government of India
-          </li>
-          <li>
-            Accredited by National Assessment and Accreditation Council (NAAC)
-            with A+ Grade & 3.57 CGPA on 4.0 Scale
-          </li>
-          <li>
-            Ranked among the top colleges in leading surveys conducted by India
-            Today, CSR, Outlook & Careers 360
-          </li>
-          <li>Achieved 100% Placement for three consecutive years</li>
-          <li>
-            Programme accreditation (Civil, CSE, ECE, EEE, EIE, BT, IT, MECH, FT
-            & TXT) by the National Board of Accreditation (NBA)
-          </li>
-          <li>DSIR recognition for Research & Development</li>
         </ul>
-      </div>
-      <div class="cont-item">
-        <h3 class="cont-head">Learning Resource</h3>
-        <p class="cont-para">
-          The five-storeyed Library is air-conditioned, computerised and
-          well-stacked. 89000 Volumes, 400 National and International Journals,
-          6500 CD-ROMs, a Digital Library with 6000 e-journals, 274 NPTEL and
-          166 NITTTR video courses are part of the resources. BIT is an
-          Institutional member of the British Council Library, Chennai, DELNET,
-          New Delhi and INDEST Consortium, New Delhi.
-        </p>
+        <h3 class="aside-sub">Mission</h3>
+        <ul>
+          <li>
+            To provide top of the line infrastructure that is most conducive for
+            learning.
+          </li>
+          <li>
+            To engage committed members of faculty who will infuse subject
+            knowledge with latest teaching pedagogies.
+          </li>
+          <li>
+            To provide state-of-the-art facilities to the members of faculty and
+            student fraternity to access and engage in diligent research.
+          </li>
+          <li>
+            To collaborate the best minds in the industries with the academia of
+            the college thereby empowering the students to meet the global
+            standards.
+          </li>
+          <li>
+            To create an enterprising environment for a continual progress and
+            change that respects heterogeneity.
+          </li>
+        </ul>
       </div>
     </div>
 
@@ -287,6 +252,7 @@
           </ul>
         </div>
       </div>
+
       <div class="foo">
         <div class="logo">
           <ion-icon name="logo-facebook"></ion-icon>
@@ -307,5 +273,13 @@
         <p>&copy; Copyright 2022 - Dineshbabu</p>
       </div>
     </div>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
